# SoftwareEval-Backends

./: .gitignore  CMakeLists.txt  README.md
include/api/softwareEval-backends/: Backend.h  Channel.h  Factory.h
include/internal/: PerformanceEstimator.h  PerformanceModel.h  Printer.h  Streamer.h  TracePrinter.h
libs/: CMakeLists.txt
libs/componentModels/: CMakeLists.txt
libs/componentModels/src/: CMakeLists.txt
scripts/: deploy_backend.py  templates.py
src/api/: Backend.cpp  Factory.cpp
src/internal/: PerformanceEstimator.cpp  PerformanceModel.cpp  Printer.cpp  Streamer.cpp  TracePrinter.cpp
variants/: CMakeLists.txt
variants/AssemblyTrace/: CMakeLists.txt
variants/AssemblyTrace/include/: AssemblyTrace_Channel.h  AssemblyTrace_Printer.h
variants/AssemblyTrace/src/: AssemblyTrace_Channel.cpp  AssemblyTrace_InstructionPrinters.cpp  AssemblyTrace_Printer.cpp
variants/CV32E40P/: CMakeLists.txt
variants/CV32E40P/include/: CV32E40P_Channel.h  CV32E40P_PerformanceModel.h  CV32E40P_Printer.h
variants/CV32E40P/src/: CV32E40P_Channel.cpp  CV32E40P_InstructionModels.cpp  CV32E40P_InstructionPrinters.cpp  CV32E40P_PerformanceModel.cpp  CV32E40P_Printer.cpp  CV32E40P_SchedulingFunction.cpp
variants/CVA6/: CMakeLists.txt
variants/CVA6/include/: CVA6_Channel.h  CVA6_PerformanceModel.h  CVA6_Printer.h
variants/CVA6/src/: CVA6_Channel.cpp  CVA6_InstructionModels.cpp  CVA6_InstructionPrinters.cpp  CVA6_PerformanceModel.cpp  CVA6_Printer.cpp  CVA6_SchedulingFunction.cpp
variants/InstructionTrace_RV64/: CMakeLists.txt
(+61 files in other folders)
